--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<b>Testing</b>
+<script>
+var name= prompt("what's your name?\n \n answer")
+
+if(name=="mendel")
+{
+document.write("not coby")
+
+} else
+
+if(name=="coby")
+{
+document.write("not mendel")
+}
+else 
+{
+var age = prompt(name+" what is your age?")
+document.write("your name is "+name+" your age is "+age)
+}
+</script>
