--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ document.write("not mendel")
 else 
 {
 var age = prompt(name+" what is your age?")
-document.write("your name is "+name+" your age is "+age)
+document.write("your name is "+name+" and your age is "+age)
 }
 </script>
